finished website landing page

--- a/crud/templates/web/admin/login_admin.html
+++ b/crud/templates/web/admin/login_admin.html
@@ -39,7 +39,7 @@
         </div>
         <!-- Right: Brand Panel -->
         <div class="w-1/2 bg-blue-700 flex">
-            <img src="{{ MEDIA_URL }}NOVA DOORS HOTEL.png" class="my-auto mx-auto" alt="Logo"/> 
+            <img src="{{ MEDIA_URL }}Admin Panel logo.png" class="my-auto mx-auto" alt="Logo"/> 
         </div>
     </div>
 </div>
