--- a/crud/templates/attachments/sidebar.html
+++ b/crud/templates/attachments/sidebar.html
@@ -8,7 +8,7 @@
      class="fixed inset-y-0 left-0 w-64 bg-white shadow-lg z-50 transform h-screen overflow-y-auto sm:overflow-y-visible sm:h-auto -translate-x-full transition-transform duration-300 sm:relative sm:translate-x-0 sm:w-64 sm:block">
     <aside class="w-64 bg-blue-600 shadow-lg h-full flex flex-col justify-between">
         <div class="flex flex-col p-6 justify-between">
-            <img src="{{ MEDIA_URL }}NOVA DOORS HOTEL.png" class="my-auto mx-auto h-40 w-40" alt="Logo"/>
+            <img src="{{ MEDIA_URL }}Admin Panel logo.png" class="my-auto mx-auto h-40 w-40" alt="Logo"/>
             <div>
                 <ul class="space-y-4">
                     <li>
